# DTSA-5506-Tesla-Global-Deliveries

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
notebooks/: 01-data-preprocessing.ipynb  02-exploratory-data-analysis.ipynb
src/: __init__.py  config.py  dataset.py  features.py  plots.py
src/modeling/: __init__.py  predict.py  train.py
